--- a/frontend/src/app/register/register.component.html
+++ b/frontend/src/app/register/register.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <h2>Registraion Form</h2>
-  <form action="">
+  <form [formGroup]="registerForm">
     <div class="form-group">
       <label for="fullname">Full Name:</label>
       <input
@@ -9,6 +9,7 @@
         id="fullname"
         placeholder="Enter Full Name"
         name="fullname"
+        formControlName="fullname"
       />
     </div>
     <div class="form-group">
@@ -19,6 +20,7 @@
         id="username"
         placeholder="Enter Username"
         name="username"
+        formControlName="username"
       />
     </div>
 
@@ -30,6 +32,7 @@
         id="email"
         placeholder="Enter Email"
         name="email"
+        formControlName="email"
       />
     </div>
 
@@ -41,9 +44,21 @@
         id="password"
         placeholder="Password"
         name="password"
+        formControlName="password"
       />
     </div>
-    <button type="button" class="btn btn-primary">Register</button> &nbsp;
+    <div class="form-group">
+      <label for="email">Confirm Password:</label>
+      <input
+        type="password"
+        class="form-control"
+        id="password"
+        placeholder="Password"
+        name="cpassword"
+        formControlName="cpassword"
+      />
+    </div>
+    <button type="button" class="btn btn-primary" (click)="register()">Register</button> &nbsp;
     <button type="button" class="btn btn-primary" (click)="moveToLogin()">
       Login
     </button>
