--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -2,7 +2,7 @@
   <h2>Login Form</h2>
   <form [formGroup]="loginForm">
     <div class="form-group">
-      <label for="email">Username:</label>
+      <label for="username">Username:</label>
       <input
         type="text"
         class="form-control"
